# segateway-source-azure-eventhub

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  Dockerfile  README.md  plugin.conf  pyproject.toml
.github/workflows/: ci-main.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  scaledobject.yaml  secret.yaml
etc/python/: pyproject.toml
etc/syslog-ng/: syslog-ng.conf
etc/syslog-ng/conf.d/parsers/: microsoft_azuread.conf
etc/syslog-ng/conf.d/plugin/destinations/: d_logscale.conf  stdout.conf
etc/syslog-ng/conf.d/plugin/lib/: internal.conf
etc/syslog-ng/conf.d/plugin/logpaths/: internal_stdout.conf
etc/syslog-ng/conf.d/plugin/parsers/: microsoft_azuread.conf
etc/syslog-ng/conf.d/plugin/sources/: hub.conf  internal.conf  microsoft_azure_source_eventhub.py  plugin.conf
microsoft_azure_eventhub_source/: ConfGenSource.py  LogSourcePlugin.py  _CleanEvent.py  firstSource.py
microsoft_azure_eventhub_source/conf/: source.conf
python/: pyproject.toml
python/microsoft_azure_source_eventhub/: __init__.py
