[tool.poetry]
name = "microsoft_azure_eventhub_source"
version = "0.1.0"
description = ""
authors = ["Ryan Faircloth <ryan@dss-i.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
azure-identity = "^1.13.0"
azure-eventhub = "^5.11.3"
azure-eventhub-checkpointstoreblob-aio = "^1.1.4"
orjson = "^3.9.3"
python-json-logger = "^2.0.7"
backoff = "^2.2.1"
pytz = "^2023.3"
python-dotenv = "^1.0.0"
flatdict = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
